Estilos CSS terminados

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<p class="datos__titulo">Teléfono</p>
 				<p class="datos__info">55 6257 9620</p>
 				<p class="datos__titulo">Dirección</p>
-				<p class="datos__info">Nezahualcóyotl, Estado de México</p>
+				<p>Nezahualcóyotl, Estado de México</p>
 			</div>
 		</section>
 		<section class="herramientas">
@@ -43,7 +43,7 @@
 				<p class="herramientas__info">Photoshop</p>
 				<p class="herramientas__info">Windows</p>
 				<p class="herramientas__info">Linux</p>
-				<p class="herramientas__info">Paquetería Ofimática</p>
+				<p class="herramientas__ultimo">Paquetería Ofimática</p>
 			</div>
 		</section>
 		<section class="habilidades">
@@ -54,7 +54,7 @@
 				<p class="habilidades__info">Manejo de Conflictos</p>
 				<p class="habilidades__info">Atención al Cliente</p>
 				<p class="habilidades__info">Administración de Oficina</p>
-				<p class="habilidades__info">Organización de Archivos</p>
+				<p class="habilidades__ultimo">Organización de Archivos</p>
 			</div>
 		</section>
 		<section class="idiomas">
@@ -93,7 +93,7 @@
 				<h2 class="trabajo__titulo">Obrero</h2>
 				<p class="trabajo__ubicacion">Taller zona Local</p>
 				<p class="trabajo__duracion">Mayo 2015 - Diciembre 2019</p>
-				<p class="trabajo__habilidades">· Cumplimiento de mis objetivos a corto y largo plazo consistentemente.<br>
+				<p class="trabajo__ultimo">· Cumplimiento de mis objetivos a corto y largo plazo consistentemente.<br>
 					· Participación proactiva en reuniones destinadas a crear nuevas prácticas.<br>
 					· Formación y supervisión de las nuevas incorporaciones a la plantilla.<br>
 					· Gestión en caja de grandes cantidades de dinero de forma rigurosa.<br>
